# ansible-collection-infra

./: README.md  setup.cfg  test-requirements.txt  tox.ini
changelogs/: config.yaml
doc/source/: index.rst
meta/: runtime.yml
plugins/modules/: service_catalog.py
tests/utils/: sanity.sh
